# SelfIndex

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  settings.py
app/static/css/: custom.css
app/templates/: add_form.html  base.html  close_modal.html  document_detail.html  document_form.html  index.html  search_results.html
docs/: architecture.md  code-map.md  current-system.md
engine/: __init__.py  bootstrap.py  chunker.py  database.py  embedder.py  init_db.py  memory.py  retriever.py
scripts/: __init__.py  format_timestamp.py  import_legacy_data.py
scripts/parsers/: __init__.py  chatgpt_parser.py  deepseek_parser.py  grok_parser.py
tests/: test_memory_pipeline.py
